Fixed Project Title Wrapping for Mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,3 @@
 .App {
   background-color: #1e1e1e;
 }
-
-@media (max-width: 800px) {
-  .App {
-    padding-top: 5%;
-    margin-left: 5%;
-    margin-right: 5%;
-  }
-}
