--- a/src/components/aboutme/AboutMe.css
+++ b/src/components/aboutme/AboutMe.css
@@ -1,7 +1,6 @@
 .AboutMe {
     width: 80%;
     padding-top: 5%;
-    margin: 0 auto;
     padding-bottom: 5%;
     display: flex;
     flex-direction: column;
