--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -4,7 +4,6 @@
     flex-direction: column;
     text-align: left;
     position: relative;
-    margin: 0 auto;
 }
 
 .projects-header {
