--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -3,3 +3,7 @@
   height: 1000px;
 }
 
+.Home-body {
+  margin-left: 10%;
+}
+
